<resources>
    <string name="app_name">Pedidos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pedidos</string>
    <string name="nav_header_subtitle">soporteo@pedidos.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_delete_all">Eliminar Todo</string>

    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_creacion">Crear Pedido</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lbl_content_image_pedido">Imagen de un pedido</string>
    <string name="lbl_content_image_lupa">Imagen de lupa para ver detalles</string>
    <string name="lbl_autor">Autor</string>
    <string name="lbl_direccion">Dirección de Entrega</string>
    <string name="lbl_detalle">Detalle del Pedido</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_guardar_crear">Crear Pedido</string>
    <string name="lbl_content_imagen_pedido">Imagen de un pedido</string>
    <string name="mensaje_creacion_pedido">Pedido creado exitosamente!</string>
    <string name="mensaje_edicion_pedido">Pedido actualizado exitosamente!</string>

    <string name="delete_all_dialog_message">¿Deseas eliminar todos los pedidos?</string>
    <string name="delete_all_dialog_title">Confirmar Eliminación</string>
    <string name="dialog_positive_button">Si</string>
    <string name="dialog_negative_button">No</string>
    <string name="delete_all_success">Se han eliminado todos los pedidos creados</string>
</resources>