<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pedidos">

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="hn.uth.pedidos.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos">

        <action android:id="@+id/action_pedidosFragment_to_creacionFragment" app:destination="@id/nav_creacion"/>
        <argument
            android:name="pedido"
            app:argType="hn.uth.pedidos.database.Pedido"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_creacion"
        android:name="hn.uth.pedidos.ui.creacion.CreacionFragment"
        android:label="@string/menu_creacion"
        tools:layout="@layout/fragment_creacion">
        <action android:id="@+id/action_edit_pedido" app:destination="@id/nav_creacion"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hn.uth.pedidos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>